feat: block contacts adaptate for mobile

--- a/index.html
+++ b/index.html
@@ -134,51 +134,54 @@
             </div>
             <a href="#" class="suggestions__link">Все услуги &rarr;</a>
         </section>
-        <section class="portfolio main-placement">
-            <div class="block-heading block-heading_place_portfolio">
-                <h2 class="block-heading__title">Портфолио</h2>
-                <p class="block-heading__subtitle">Завершенные проекты</p>
-                <p class="block-heading__description">Мы специализируемся на предоставлении программного обеспечения
-                    высшего качества и предоставлении высококвалифицированных команд с опытом в области разработки
-                    блокчейнов, аналитики больших данных и AI/ML, а также услуг по разработке программного обеспечения
-                    на заказ.</p>
-            </div>
-            <div class="portfolio__cards">
-                <article class="portfolio__card portfolio__card_size_small portfolio__card_palce_mobile">
-                    <img src="images/mobile_control.png" alt="мобильный_контроль" class="portfolio__card-image">
-                    <h3 class="portfolio__card-title">Мобильный контроль</h3>
-                    <p class="portfolio__card-subtitle">Сервис для работы с клиентами и партнерами</p>
-                </article>
-                <article class="portfolio__card portfolio__card_size_small portfolio__card_palce_voice">
-                    <img src="images/voice_control.png" alt="голосовое_управление" class="portfolio__card-image">
-                    <h3 class="portfolio__card-title">Голосовое управление</h3>
-                    <p class="portfolio__card-subtitle">Сервис для работы по задачам</p>
-                </article>
-                <article class="portfolio__card portfolio__card_size_small portfolio__card_palce_vroom">
-                    <img src="images/vroom_games.png" alt="игры_врум" class="portfolio__card-image">
-                    <h3 class="portfolio__card-title">Vroomgames</h3>
-                    <p class="portfolio__card-subtitle">Сервис для работы со списками заказов</p>
-                </article>
-                <article class="portfolio__card portfolio__card_size_small portfolio__card_palce_atol">
-                    <img src="images/atol.png" alt="атол_бонус" class="portfolio__card-image">
-                    <h3 class="portfolio__card-title">ATOL-бонус</h3>
-                    <p class="portfolio__card-subtitle">Мобильное приложение для профессионалов</p>
-                </article>
-                <article class="portfolio__card portfolio__card_size_large portfolio__card_palce_prorab">
-                    <img src="images/prorab.png" alt="прораб_икс" class="portfolio__card-image">
-                    <h3 class="portfolio__card-title">Prorab-x</h3>
-                    <p class="portfolio__card-subtitle">Мобильное приложение для строителей</p>
-                </article>
-                <article class="portfolio__card portfolio__card_size_large portfolio__card_palce_actual">
-                    <img src="images/actual.png" alt="актуаль" class="portfolio__card-image">
-                    <h3 class="portfolio__card-title">Актуаль</h3>
-                    <p class="portfolio__card-subtitle">Сайт промо игры</p>
-                </article>
-            </div>
-            <div class="portfolio__buttons">
-                <button type="button" class="portfolio-button">Портфолио</button>
-                <button type="button" class="button-project-order button-project-order_place_portfolio">Заказать
-                    проект</button>
+        <section class="portfolio">
+            <div class="portfolio__wrapper main-placement">
+                <div class="block-heading block-heading_place_portfolio">
+                    <h2 class="block-heading__title">Портфолио</h2>
+                    <p class="block-heading__subtitle">Завершенные проекты</p>
+                    <p class="block-heading__description">Мы специализируемся на предоставлении программного обеспечения
+                        высшего качества и предоставлении высококвалифицированных команд с опытом в области разработки
+                        блокчейнов, аналитики больших данных и AI/ML, а также услуг по разработке программного
+                        обеспечения
+                        на заказ.</p>
+                </div>
+                <div class="portfolio__cards">
+                    <article class="portfolio__card portfolio__card_size_small portfolio__card_palce_mobile">
+                        <img src="images/mobile_control.png" alt="мобильный_контроль" class="portfolio__card-image">
+                        <h3 class="portfolio__card-title">Мобильный контроль</h3>
+                        <p class="portfolio__card-subtitle">Сервис для работы с клиентами и партнерами</p>
+                    </article>
+                    <article class="portfolio__card portfolio__card_size_small portfolio__card_palce_voice">
+                        <img src="images/voice_control.png" alt="голосовое_управление" class="portfolio__card-image">
+                        <h3 class="portfolio__card-title">Голосовое управление</h3>
+                        <p class="portfolio__card-subtitle">Сервис для работы по задачам</p>
+                    </article>
+                    <article class="portfolio__card portfolio__card_size_small portfolio__card_palce_vroom">
+                        <img src="images/vroom_games.png" alt="игры_врум" class="portfolio__card-image">
+                        <h3 class="portfolio__card-title">Vroomgames</h3>
+                        <p class="portfolio__card-subtitle">Сервис для работы со списками заказов</p>
+                    </article>
+                    <article class="portfolio__card portfolio__card_size_small portfolio__card_palce_atol">
+                        <img src="images/atol.png" alt="атол_бонус" class="portfolio__card-image">
+                        <h3 class="portfolio__card-title">ATOL-бонус</h3>
+                        <p class="portfolio__card-subtitle">Мобильное приложение для профессионалов</p>
+                    </article>
+                    <article class="portfolio__card portfolio__card_size_large portfolio__card_palce_prorab">
+                        <img src="images/prorab.png" alt="прораб_икс" class="portfolio__card-image">
+                        <h3 class="portfolio__card-title">Prorab-x</h3>
+                        <p class="portfolio__card-subtitle">Мобильное приложение для строителей</p>
+                    </article>
+                    <article class="portfolio__card portfolio__card_size_large portfolio__card_palce_actual">
+                        <img src="images/actual.png" alt="актуаль" class="portfolio__card-image">
+                        <h3 class="portfolio__card-title">Актуаль</h3>
+                        <p class="portfolio__card-subtitle">Сайт промо игры</p>
+                    </article>
+                </div>
+                <div class="portfolio__buttons">
+                    <button type="button" class="portfolio-button">Портфолио</button>
+                    <button type="button" class="button-project-order button-project-order_place_portfolio">Заказать
+                        проект</button>
+                </div>
             </div>
         </section>
         <section class="benefits main-placement">
@@ -225,64 +228,72 @@
         <section class="clients main-placement">
             <h2 class="clients__title">Клиенты</h2>
             <div class="clients__container">
-                <a href="https://cinzano.com/"><img src="images/vector_cinzano.svg" alt="чинзано"
-                        class="clients__item"></a>
-                <a href="https://www.atol.ru/"><img src="images/vector_atol.svg" alt="атол" class="clients__item"></a>
-                <a href="https://mondoro.com/"><img src="images/vector_mondoro.svg" alt="мондоро"
-                        class="clients__item"></a>
-                <a href="https://www.vroom.org/"><img src="images/vector_vroom.svg" alt="врум"
-                        class="clients__item"></a>
-                <a href="https://qiosk.ru/brand/aktuali/"><img src="images/vector_actual.svg" alt="актуаль"
-                        class="clients__item"></a>
-                <a href="https://cinzano.com/"><img src="images/vector_cinzano.svg" alt="чинзано"
-                        class="clients__item"></a>
-                <a href="https://qiosk.ru/brand/aktuali/"><img src="images/vector_actual.svg" alt="актуаль"
-                        class="clients__item"></a>
-                <a href="https://cinzano.com/"><img src="images/vector_cinzano.svg" alt="чинзано"
-                        class="clients__item"></a>
-                <a href="https://www.atol.ru/"><img src="images/vector_atol.svg" alt="атол" class="clients__item"></a>
-                <a href="https://mondoro.com/"><img src="images/vector_mondoro.svg" alt="мондоро"
-                        class="clients__item"></a>
-                <a href="https://cinzano.com/"><img src="images/vector_cinzano.svg" alt="чинзано"
-                        class="clients__item"></a>
-                <a href="https://www.vroom.org/"><img src="images/vector_vroom.svg" alt="врум"
-                        class="clients__item"></a>
+                <a href="https://cinzano.com/" class="clients__item"><img src="images/vector_cinzano.svg" alt="чинзано"></a>
+                <a href="https://www.atol.ru/" class="clients__item"><img src="images/vector_atol.svg" alt="атол"></a>
+                <a href="https://mondoro.com/" class="clients__item"><img src="images/vector_mondoro.svg" alt="мондоро"></a>
+                <a href="https://www.vroom.org/" class="clients__item"><img src="images/vector_vroom.svg" alt="врум"></a>
+                <a href="https://qiosk.ru/brand/aktuali/" class="clients__item"><img src="images/vector_actual.svg" alt="актуаль"></a>
+                <a href="https://cinzano.com/" class="clients__item"><img src="images/vector_cinzano.svg" alt="чинзано"></a>
+                <a href="https://qiosk.ru/brand/aktuali/" class="clients__item"><img src="images/vector_actual.svg" alt="актуаль"></a>
+                <a href="https://cinzano.com/" class="clients__item"><img src="images/vector_cinzano.svg" alt="чинзано"></a>
+                <a href="https://www.atol.ru/" class="clients__item"><img src="images/vector_atol.svg" alt="атол"></a>
+                <a href="https://mondoro.com/" class="clients__item"><img src="images/vector_mondoro.svg" alt="мондоро"></a>
+                <a href="https://cinzano.com/" class="clients__item"><img src="images/vector_cinzano.svg" alt="чинзано"></a>
+                <a href="https://www.vroom.org/" class="clients__item"><img src="images/vector_vroom.svg" alt="врум"></a>
             </div>
         </section>
-        <section class="contacts">
+        <section class="contacts main-placement">
             <div class="contacts__container">
                 <h2 class="contacts__title">Связаться</h2>
                 <p class="contacts__subtitle">Готовы предложить Вам лучшие IT-решения</p>
-                <div class="form__container">
-                    <div class="form__description">
-                        <h3 class="form__description-title">Есть идея?</h3>
-                        <p class="form__description-subtitle">У вас есть уже существующий проект, который вы хотите усовершенствовать? Вы хотите воплотить в жизнь смелую идею, но вам нужна помощь? Или вы вообще не знаете, с чего начать реализацию проекта?</p>
-                        <div class="form__description-countries">
-                            <div class="form__description-slovenia">
-                                <h4 class="form__description-slovenia-title">Словения</h4>
-                                <p class="form__description-slovenia-contacts">contact@unionsmarttech.ru<br>+421 494 539-852</p>
+                <div class="form-container">
+                    <div class="form-description">
+                        <h3 class="form-description__title">Есть идея?</h3>
+                        <p class="form-description__subtitle">У вас есть уже существующий проект, который вы хотите
+                            усовершенствовать? Вы хотите воплотить в жизнь смелую идею, но вам нужна помощь? Или вы
+                            вообще не знаете, с чего начать реализацию проекта?</p>
+                        <div class="form-description__countries">
+                            <div class="form-description__countrie">
+                                <h4 class="form-description__countrie-title">Словения</h4>
+                                <p class="form-description__contacts">contact@unionsmarttech.ru<br>+421 494 539-852</p>
                             </div>
-                            <div class="form__description-russia">
-                                <h4 class="form__description-russia-title">Россия</h4>
-                                <p class="form__description-russia-contacts">contact@unionsmarttech.ru<br>+7 911 932-90-29</p>
+                            <div class="form-description__countrie">
+                                <h4 class="form-description__countrie-title">Россия</h4>
+                                <p class="form-description__contacts">contact@unionsmarttech.ru<br>+7 911 932-90-29</p>
                             </div>
                         </div>
-                        <ul class="form__description-links">
-                            <li><a href="" class="form__description-link"><img src="" alt="" class="form__description-liform__description-link-image"></a></li>
-                            <li><a href="" class="form__description-link"><img src="" alt="" class="form__description-liform__description-link-image"></a></li>
-                            <li><a href="" class="form__description-link"><img src="" alt="" class="form__description-liform__description-link-image"></a></li>
-                            <li><a href="" class="form__description-link"><img src="" alt="" class="form__description-liform__description-link-image"></a></li>
-                            <li><a href="" class="form__description-link"><img src="" alt="" class="form__description-liform__description-link-image"></a></li>
+                        <ul class="form-description__links">
+                            <li><a href="" class="form-description__link"><img src="images/social_icon_linkedin.svg"
+                                        alt="" class="description__link-image"></a></li>
+                            <li><a href="" class="form-description__link"><img src="images/social_icon_google.svg"
+                                        alt="" class="description__link-image"></a></li>
+                            <li><a href="" class="form-description__link"><img src="images/social_icon_facebook.svg"
+                                        alt="" class="description__link-image"></a></li>
+                            <li><a href="" class="form-description__link"><img src="images/social_icon_dribbble.svg"
+                                        alt="" class="description__link-image"></a></li>
+                            <li><a href="" class="form-description__link"><img src="images/social_icon_instagram.svg"
+                                        alt="" class="description__link-image"></a></li>
                         </ul>
                     </div>
-                    <form action="" class="contact__form">
-                        <h5 class="contact__form-title">Связаться с нами</h5>
-                        <p class="contact__form-subtitle">Оставьте свою контактную информацию, и мы с радостью свяжемся с вами!</p>
-                        <input type="text" placeholder="Имя" class="">
-                        <input type="text" placeholder="Компания" class="">
-                        <input type="email" placeholder="Электронная почта" class="">
-                        <input type="text" placeholder="Сообщение" class="">
-                        <button type="submit">Отправить</button>
+                    <form action="" class="contacts__form">
+                        <h5 class="contacts__form-title">Связаться с нами</h5>
+                        <p class="contacts__form-subtitle">Оставьте свою контактную информацию, и мы с радостью свяжемся
+                            с вами!</p>
+                        <input type="text" name="name" placeholder="Имя*" class="contacts__form-input" required>
+                        <input type="text" name="company" placeholder="Компания" class="contacts__form-input">
+                        <input type="email" name="email" placeholder="Электронная почта*" class="contacts__form-input" required>
+                        <textarea type="text" name="message" placeholder="Сообщение" class="contacts__form-input contacts__form-input_type_textarea"></textarea>
+                        <!-- <small class="contacts__form-footnote"><span
+                                class="contacts__form-footnote contacts__form-footnote_span_accent">*</span>
+                            обязательные поля для заполнения</small> -->
+                        <div class="contacts__form-button-wrapper">
+                            <label class="contacts__form-footnote"><span
+                                class="contacts__form-footnote contacts__form-footnote_span_accent">*</span>
+                            обязательные поля для заполнения
+                            <button type="submit" class="contacts__form-button">Отправить</button></label>
+                                <p class="contacts__form-footnote">Нажимая на кнопку, вы соглашаетесь с <a
+                                        href="">Политикой конфидециальности</a></p>
+                        </div>
                     </form>
                 </div>
             </div>
