feat: add footer

--- a/index.html
+++ b/index.html
@@ -228,18 +228,28 @@
         <section class="clients main-placement">
             <h2 class="clients__title">Клиенты</h2>
             <div class="clients__container">
-                <a href="https://cinzano.com/" class="clients__item"><img src="images/vector_cinzano.svg" alt="чинзано"></a>
+                <a href="https://cinzano.com/" class="clients__item"><img src="images/vector_cinzano.svg"
+                        alt="чинзано"></a>
                 <a href="https://www.atol.ru/" class="clients__item"><img src="images/vector_atol.svg" alt="атол"></a>
-                <a href="https://mondoro.com/" class="clients__item"><img src="images/vector_mondoro.svg" alt="мондоро"></a>
-                <a href="https://www.vroom.org/" class="clients__item"><img src="images/vector_vroom.svg" alt="врум"></a>
-                <a href="https://qiosk.ru/brand/aktuali/" class="clients__item"><img src="images/vector_actual.svg" alt="актуаль"></a>
-                <a href="https://cinzano.com/" class="clients__item"><img src="images/vector_cinzano.svg" alt="чинзано"></a>
-                <a href="https://qiosk.ru/brand/aktuali/" class="clients__item"><img src="images/vector_actual.svg" alt="актуаль"></a>
-                <a href="https://cinzano.com/" class="clients__item"><img src="images/vector_cinzano.svg" alt="чинзано"></a>
+                <a href="https://mondoro.com/" class="clients__item"><img src="images/vector_mondoro.svg"
+                        alt="мондоро"></a>
+                <a href="https://www.vroom.org/" class="clients__item"><img src="images/vector_vroom.svg"
+                        alt="врум"></a>
+                <a href="https://qiosk.ru/brand/aktuali/" class="clients__item"><img src="images/vector_actual.svg"
+                        alt="актуаль"></a>
+                <a href="https://cinzano.com/" class="clients__item"><img src="images/vector_cinzano.svg"
+                        alt="чинзано"></a>
+                <a href="https://qiosk.ru/brand/aktuali/" class="clients__item"><img src="images/vector_actual.svg"
+                        alt="актуаль"></a>
+                <a href="https://cinzano.com/" class="clients__item"><img src="images/vector_cinzano.svg"
+                        alt="чинзано"></a>
                 <a href="https://www.atol.ru/" class="clients__item"><img src="images/vector_atol.svg" alt="атол"></a>
-                <a href="https://mondoro.com/" class="clients__item"><img src="images/vector_mondoro.svg" alt="мондоро"></a>
-                <a href="https://cinzano.com/" class="clients__item"><img src="images/vector_cinzano.svg" alt="чинзано"></a>
-                <a href="https://www.vroom.org/" class="clients__item"><img src="images/vector_vroom.svg" alt="врум"></a>
+                <a href="https://mondoro.com/" class="clients__item"><img src="images/vector_mondoro.svg"
+                        alt="мондоро"></a>
+                <a href="https://cinzano.com/" class="clients__item"><img src="images/vector_cinzano.svg"
+                        alt="чинзано"></a>
+                <a href="https://www.vroom.org/" class="clients__item"><img src="images/vector_vroom.svg"
+                        alt="врум"></a>
             </div>
         </section>
         <section class="contacts main-placement">
@@ -281,15 +291,17 @@
                             с вами!</p>
                         <input type="text" name="name" placeholder="Имя*" class="contacts__form-input" required>
                         <input type="text" name="company" placeholder="Компания" class="contacts__form-input">
-                        <input type="email" name="email" placeholder="Электронная почта*" class="contacts__form-input" required>
-                        <textarea type="text" name="message" placeholder="Сообщение" class="contacts__form-input contacts__form-input_type_textarea"></textarea>
+                        <input type="email" name="email" placeholder="Электронная почта*" class="contacts__form-input"
+                            required>
+                        <textarea type="text" name="message" placeholder="Сообщение"
+                            class="contacts__form-input contacts__form-input_type_textarea"></textarea>
                         <div class="contacts__form-button-wrapper">
                             <label class="contacts__form-footnote"><span
-                                class="contacts__form-footnote contacts__form-footnote_span_accent">*</span>
-                            обязательные поля для заполнения
-                            <button type="submit" class="contacts__form-button">Отправить</button></label>
-                                <p class="contacts__form-footnote">Нажимая на кнопку, вы соглашаетесь с <a
-                                        href="">Политикой конфидециальности</a></p>
+                                    class="contacts__form-footnote contacts__form-footnote_span_accent">*</span>
+                                обязательные поля для заполнения
+                                <button type="submit" class="contacts__form-button">Отправить</button></label>
+                            <p class="contacts__form-footnote">Нажимая на кнопку, вы соглашаетесь с <a href="">Политикой
+                                    конфидециальности</a></p>
                         </div>
                     </form>
                 </div>
@@ -302,9 +314,12 @@
                 <li class="faq__question-item">
                     <div class="faq__question-wrapper">
                         <h3 class="faq__qestion">Когда я смогу использовать готовый продукт?</h3>
-                        <button type="button" class="faq__answer-button faq__answer-button_active" aria-label="ответ"></button>
+                        <button type="button" class="faq__answer-button faq__answer-button_active"
+                            aria-label="ответ"></button>
                     </div>
-                    <p class="faq__answer faq__answer_opened">Мы обеспечиваем полный цикл разработки программного обеспечения, развертывания и послерелизной поддержки. Вы получите функциональный, масштабируемый и безопасный продукт, идеально подходящий для бизнеса.
+                    <p class="faq__answer faq__answer_opened">Мы обеспечиваем полный цикл разработки программного
+                        обеспечения, развертывания и послерелизной поддержки. Вы получите функциональный, масштабируемый
+                        и безопасный продукт, идеально подходящий для бизнеса.
                         MVP за 90 дней.</p>
                 </li>
                 <li class="faq__question-item">
@@ -331,7 +346,60 @@
             </ul>
         </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <div class="footer__wrapper">
+            <div class="footer__container">
+                <div class="footer__description">
+                    <div class="footer__team">
+                        <h2 class="footer__team-title">Российская команда</h2>
+                        <p class="footer__team-contacts">contact@unionsmarttech.ru<br>+7 911 932-90-29</p>
+                        <p class="footer__team-contacts">24 Entuziastov street,<br>Saint Petersburg, 191 119</p>
+                    </div>
+                    <div class="footer__team">
+                        <h2 class="footer__team-title">Словацкая команда</h2>
+                        <p class="footer__team-contacts">contact@unionsmarttech.ru<br>+421 494 539-852</p>
+                        <p class="footer__team-contacts">24 Entuziastov street,<br>Saint Petersburg, 191 119</p>
+                    </div>
+                </div>
+                <div class="footer__menu-container">
+                    <ul class="footer__menu">
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Главная</a></li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Команда</a></li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Услуги</a></li>
+                    </ul>
+                    <ul class="footer__menu">
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Карьера</a></li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Портфолио</a></li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Контакты</a></li>
+                    </ul>
+                    <ul class="footer__menu">
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link" lang="en">Google
+                                <img src="images/social_icon_google.svg" alt="гугл" class="footer__link-image">
+                            </a></li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link" lang="en">Facebook
+                                <img src="images/social_icon_facebook.svg" alt="фейсбук" class="footer__link-image">
+                            </a></li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link" lang="en">instagram
+                                <img src="images/social_icon_instagram.svg" alt="инстаграм" class="footer__link-image">
+                            </a></li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link" lang="en">Dribbble
+                                <img src="images/social_icon_dribbble.svg" alt="дриббл" class="footer__link-image">
+                            </a></li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link" lang="en">linkedin
+                                <img src="images/social_icon_linkedin.svg" alt="линкедин" class="footer__link-image">
+                            </a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__info">
+                <p class="footer__signature">Разработка: студия ЯР</p>
+                <div class="footer__policy-container">
+                    <a href="#" class="footer__policy">Политика конфиденциальности</a>
+                    <a href="#" class="footer__policy" lang="en">Cookies Policy</a>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="scripts/index.js"></script>
 </body>
 
