feat: add footer mobile version

--- a/index.html
+++ b/index.html
@@ -373,26 +373,41 @@
                         <li class="footer__menu-item"><a href="#" class="footer__menu-link">Контакты</a></li>
                     </ul>
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link" lang="en">Google
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link">
+                                <p class="footer__link-text" lang="en">Google</p>
                                 <img src="images/social_icon_google.svg" alt="гугл" class="footer__link-image">
-                            </a></li>
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link" lang="en">Facebook
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link">
+                                <p class="footer__link-text" lang="en">Facebook</p>
                                 <img src="images/social_icon_facebook.svg" alt="фейсбук" class="footer__link-image">
-                            </a></li>
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link" lang="en">instagram
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link">
+                                <p class="footer__link-text" lang="en">Instagram</p>
                                 <img src="images/social_icon_instagram.svg" alt="инстаграм" class="footer__link-image">
-                            </a></li>
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link" lang="en">Dribbble
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link">
+                                <p class="footer__link-text" lang="en">Dribbble</p>
                                 <img src="images/social_icon_dribbble.svg" alt="дриббл" class="footer__link-image">
-                            </a></li>
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link" lang="en">linkedin
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link">
+                                <p class="footer__link-text" lang="en">linkedin</p>
                                 <img src="images/social_icon_linkedin.svg" alt="линкедин" class="footer__link-image">
-                            </a></li>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
             <div class="footer__info">
-                <p class="footer__signature">Разработка: студия ЯР</p>
+                <p class="footer__signature">&copy; 2022. Дмитрий Малиновский</p>
                 <div class="footer__policy-container">
                     <a href="#" class="footer__policy">Политика конфиденциальности</a>
                     <a href="#" class="footer__policy" lang="en">Cookies Policy</a>
