fix: change block info tags

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="root">
-    <header class="header main-placement">
+    <header class="header">
         <div class="heading">
             <a href="#" class="heading__logo-link">
                 <img src="/images/logo_ust.svg" alt="логотип" class="heading__logo">
@@ -64,13 +64,13 @@
     </header>
     <main class="content">
         <section class="info main-placement">
-            <figure class="info__picture">
-                <figcaption class="info__caption">О нас</figcaption>
+            <div class="info__picture">
+                <h2 class="info__title">О нас</h2>
                 <img src="images/why_ust.png" alt="" class="info__image">
-            </figure>
-            <div class="info__description">
-                <h2 class="info__title">Почему UST?</h2>
-                <p class="info__subtitle">К услугам наших клиентов разработка программного обеспечения на заказ,
+            </div>
+            <div class="info__description-container">
+                <p class="info__subtitle">Почему UST?</p>
+                <p class="info__description">К услугам наших клиентов разработка программного обеспечения на заказ,
                     проектирование пользовательских интерфейсов, создание сайтов (в том числе на основе индивидуальной
                     CMS) и их поддержка.
                     Мы также предлагаем услугу IT-консалтинга — налаживание работы любых информационно-аналитических
