feat: add team block

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </ul>
     </header>
     <main class="content">
-        <section class="info main-placement">
+        <section class="info block-indent">
             <div class="info__picture">
                 <h2 class="info__title">О нас</h2>
                 <img src="images/why_ust.png" alt="" class="info__image">
@@ -86,7 +86,7 @@
                 </div>
             </div>
         </section>
-        <section class="suggestions main-placement">
+        <section class="suggestions block-indent">
             <div class="block-heading">
                 <h2 class="block-heading__title">Наши предложения</h2>
                 <p class="block-heading__subtitle">Разработка полного цикла</p>
@@ -135,7 +135,7 @@
             <a href="#" class="suggestions__link">Все услуги &rarr;</a>
         </section>
         <section class="portfolio">
-            <div class="portfolio__wrapper main-placement">
+            <div class="portfolio__wrapper block-indent">
                 <div class="block-heading block-heading_place_portfolio">
                     <h2 class="block-heading__title">Портфолио</h2>
                     <p class="block-heading__subtitle">Завершенные проекты</p>
@@ -184,7 +184,7 @@
                 </div>
             </div>
         </section>
-        <section class="benefits main-placement">
+        <section class="benefits block-indent">
             <div class="block-heading">
                 <h2 class="block-heading__title">Наши</h2>
                 <p class="block-heading__subtitle">Преимущества</p>
@@ -225,7 +225,7 @@
                 </article>
             </div>
         </section>
-        <section class="clients main-placement">
+        <section class="clients block-indent">
             <h2 class="clients__title">Клиенты</h2>
             <div class="clients__container">
                 <a href="https://cinzano.com/" class="clients__item"><img src="images/vector_cinzano.svg"
@@ -252,7 +252,7 @@
                         alt="врум"></a>
             </div>
         </section>
-        <section class="contacts main-placement">
+        <section class="contacts block-indent">
             <div class="contacts__container">
                 <h2 class="contacts__title">Связаться</h2>
                 <p class="contacts__subtitle">Готовы предложить Вам лучшие IT-решения</p>
@@ -307,7 +307,7 @@
                 </div>
             </div>
         </section>
-        <section class="faq main-placement">
+        <section class="faq block-indent">
             <h2 class="faq__title" lang="en">FAQ</h2>
             <p class="faq__subtitle">Возможно, у вас остались вопросы. Отвечаем</p>
             <ul class="faq__questions">
