--- a/team.html
+++ b/team.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Команда UST</title>
-    <link rel="stylesheet" href="pages/team.css">
+    <link rel="stylesheet" href="pages/team-page.css">
 </head>
 
 <body class="root">
-    <header class="team-header">
+    <header class="team-header block-indent">
         <div class="heading">
             <a href="#" class="heading__logo-link">
                 <img src="/images/logo_ust.svg" alt="логотип" class="heading__logo">
@@ -43,6 +43,66 @@
                 государством.</p>
         </div>
     </header>
+    <main class="content">
+        <section class="team block-indent">
+            <div class="team__text-block">
+                <h2 class="team__title">Команда, ориентированная на людей</h2>
+                <p class="team__subtitle">В команде нашей компании работают высококвалифицированные IT-специалисты,
+                    которые обладают не только качественными знаниями, но и бесценным опытом в разработке инновационных
+                    продуктов. Самое главное - каждый из них влюблен в то, что делает. Вы можете познакомиться с каждым
+                    участником нашей команды чуть ближе.</p>
+            </div>
+            <article class="business-card">
+                <img src="images/nikolay_shpakov.png" alt="николай_шпаков" class="business-card__image">
+                <h3 class="business-card__title">Николай Шпаков</h3>
+                <p class="business-card__subtitle">Исполнительный директор</p>
+                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
+            </article>
+            <article class="business-card">
+                <img src="images/oleg_naumenko.png" alt="олег_науменко" class="business-card__image">
+                <h3 class="business-card__title">Олег Науменко</h3>
+                <p class="business-card__subtitle">СТО</p>
+                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
+            </article>
+            <article class="business-card">
+                <img src="images/dmitriy_ershov.png" alt="дмитрий_ершов" class="business-card__image">
+                <h3 class="business-card__title">Дмитрий Ершов</h3>
+                <p class="business-card__subtitle">Руководитель группы IOS</p>
+                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
+            </article>
+            <article class="business-card">
+                <img src="images/yaroslav_fomin.png" alt="ярослав_фомин" class="business-card__image">
+                <h3 class="business-card__title">Ярослав Фомин</h3>
+                <p class="business-card__subtitle">Специалист по подбору талантов</p>
+                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
+            </article>
+            <article class="business-card">
+                <img src="images/elena_goriunova.png" alt="елена_горюнова" class="business-card__image">
+                <h3 class="business-card__title">Елена Горюнова</h3>
+                <p class="business-card__subtitle">Руководитель группы дизайнеров</p>
+                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
+            </article>
+            <article class="business-card">
+                <img src="images/yaroslav_fomin2.png" alt="ярослав_фомин" class="business-card__image">
+                <h3 class="business-card__title">Ярослав Фомин</h3>
+                <p class="business-card__subtitle">Руководитель группы контроля качества</p>
+                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
+            </article>
+            <article class="business-card">
+                <img src="images/nikolay_shpakov2.png" alt="николай_шпаков" class="business-card__image">
+                <h3 class="business-card__title">Николай Шпаков</h3>
+                <p class="business-card__subtitle">Управляющий делами</p>
+                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
+            </article>
+            <article class="business-card">
+                <img src="images/olga_naumenko.png" alt="ольга_науменко" class="business-card__image">
+                <h3 class="business-card__title">Ольга Науменко</h3>
+                <p class="business-card__subtitle">Руководитель группы Android</p>
+                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
+            </article>
+        </section>
+    </main>
+    <footer class="footer"></footer>
     <script src="scripts/team.js"></script>
 </body>
 
